@@ -16,12 +16,19 @@
 package com.android.tools.idea.run.deployment;
 
 import com.android.ddmlib.IDevice;
+import com.android.tools.idea.execution.common.AndroidExecutionTarget;
 import com.android.tools.idea.run.AndroidRunConfigurationBase;
+import com.android.tools.idea.run.configuration.AndroidWearConfiguration;
+import com.google.common.util.concurrent.Futures;
+import com.google.common.util.concurrent.ListenableFuture;
+import com.google.common.util.concurrent.MoreExecutors;
 import com.intellij.execution.ExecutionTarget;
 import com.intellij.execution.configurations.RunConfiguration;
+import com.intellij.openapi.util.UserDataHolderBase;
+import com.intellij.util.concurrency.AppExecutorUtil;
 import icons.StudioIcons;
+import java.awt.EventQueue;
 import java.util.Collection;
-import java.util.List;
 import java.util.Objects;
 import java.util.stream.Collectors;
 import java.util.stream.Stream;
@@ -33,10 +40,10 @@ import org.jetbrains.annotations.NotNull;
  * (but <em>not</em> the apply changes) toolbar buttons.
  */
 final class DeviceAndSnapshotComboBoxExecutionTarget extends AndroidExecutionTarget {
-  private final @NotNull Collection<@NotNull Key> myKeys;
+  private final @NotNull Collection<Key> myKeys;
   private final @NotNull AsyncDevicesGetter myDevicesGetter;
 
-  DeviceAndSnapshotComboBoxExecutionTarget(@NotNull Collection<@NotNull Target> targets, @NotNull AsyncDevicesGetter devicesGetter) {
+  DeviceAndSnapshotComboBoxExecutionTarget(@NotNull Collection<Target> targets, @NotNull AsyncDevicesGetter devicesGetter) {
     myKeys = targets.stream()
       .map(Target::getDeviceKey)
       .collect(Collectors.toSet());
@@ -45,8 +52,14 @@ final class DeviceAndSnapshotComboBoxExecutionTarget extends AndroidExecutionTar
   }
 
   @Override
-  public boolean isApplicationRunning(@NotNull String appPackage) {
-    return deviceStream().anyMatch(device -> device.isRunning(appPackage));
+  public @NotNull ListenableFuture<Boolean> isApplicationRunningAsync(@NotNull String appPackage) {
+    var futures = deviceStream()
+      .map(device -> device.isRunningAsync(appPackage))
+      .collect(Collectors.toList());
+
+    // noinspection UnstableApiUsage, SpellCheckingInspection
+    return Futures.transform(Futures.successfulAsList(futures), runnings -> runnings.contains(true),
+                             AppExecutorUtil.getAppExecutorService());
   }
 
   @Override
@@ -54,20 +67,44 @@ final class DeviceAndSnapshotComboBoxExecutionTarget extends AndroidExecutionTar
     return (int)deviceStream().count();
   }
 
+  @Override
+  public @NotNull ListenableFuture<Collection<IDevice>> getRunningDevicesAsync() {
+    var futures = deviceStream()
+      .filter(Device::isConnected)
+      .map(Device::getDdmlibDeviceAsync)
+      .collect(Collectors.toList());
+
+    @SuppressWarnings("UnstableApiUsage")
+    var future = Futures.successfulAsList(futures);
+
+    // The EDT and Action Updater (Common) threads call into this. Ideally we'd use the respective executors here instead of the direct
+    // executor. But we don't have access to the Action Updater (Common) executor.
+
+    // noinspection UnstableApiUsage
+    return Futures.transform(future, DeviceAndSnapshotComboBoxExecutionTarget::filterNonNull, MoreExecutors.directExecutor());
+  }
+
   @NotNull
   @Override
   public Collection<IDevice> getRunningDevices() {
+    if (Thread.currentThread().getName().equals("Action Updater (Common)") || EventQueue.isDispatchThread()) {
+      Loggers.errorConditionally(DeviceAndSnapshotComboBoxExecutionTarget.class,
+                                 "Blocking Future::get calls on an Action Updater (Common) thread or the EDT http://b/259746412, " +
+                                 "http://b/259746444, http://b/259746749, http://b/259747002, http://b/259747870, and http://b/259747965");
+    }
+
     return deviceStream()
-      .map(Device::getDdmlibDevice)
-      .filter(Objects::nonNull)
+      .filter(Device::isConnected)
+      .map(Device::getDdmlibDeviceAsync)
+      .map(Futures::getUnchecked)
       .collect(Collectors.toList());
   }
 
-  private @NotNull Stream<@NotNull Device> deviceStream() {
+  private @NotNull Stream<Device> deviceStream() {
     return myDevicesGetter.get().map(this::filteredStream).orElseGet(Stream::empty);
   }
 
-  private @NotNull Stream<@NotNull Device> filteredStream(@NotNull Collection<@NotNull Device> devices) {
+  private @NotNull Stream<Device> filteredStream(@NotNull Collection<Device> devices) {
     return devices.stream().filter(device -> myKeys.contains(device.getKey()));
   }
 
@@ -83,22 +120,19 @@ final class DeviceAndSnapshotComboBoxExecutionTarget extends AndroidExecutionTar
   @NotNull
   @Override
   public String getDisplayName() {
-    List<Device> devices = deviceStream().collect(Collectors.toList());
+    var devices = deviceStream().toList();
 
-    switch (devices.size()) {
-      case 0:
-        return "No Devices";
-      case 1:
-        return devices.get(0).getName();
-      default:
-        return "Multiple Devices";
-    }
+    return switch (devices.size()) {
+      case 0 -> "No Devices";
+      case 1 -> devices.get(0).getName();
+      default -> "Multiple Devices";
+    };
   }
 
   @NotNull
   @Override
   public Icon getIcon() {
-    List<Device> devices = deviceStream().collect(Collectors.toList());
+    var devices = deviceStream().toList();
 
     if (devices.size() == 1) {
       return devices.get(0).getIcon();
@@ -109,6 +143,19 @@ final class DeviceAndSnapshotComboBoxExecutionTarget extends AndroidExecutionTar
 
   @Override
   public boolean canRun(@NotNull RunConfiguration configuration) {
-    return configuration instanceof AndroidRunConfigurationBase;
+    Boolean deploysToLocalDevice = false;
+    // This allows BlazeCommandRunConfiguration to run as its DEPLOY_TO_LOCAL_DEVICE is set by BlazeAndroidBinaryRunConfigurationHandler
+    if (configuration instanceof UserDataHolderBase) {
+      deploysToLocalDevice = ((UserDataHolderBase)configuration).getUserData(DeviceAndSnapshotComboBoxAction.DEPLOYS_TO_LOCAL_DEVICE);
+    }
+    return configuration instanceof AndroidRunConfigurationBase ||
+           configuration instanceof AndroidWearConfiguration ||
+           (deploysToLocalDevice != null && deploysToLocalDevice);
+  }
+
+  private static @NotNull Collection<IDevice> filterNonNull(@NotNull Collection<IDevice> devices) {
+    return devices.stream()
+      .filter(Objects::nonNull)
+      .collect(Collectors.toList());
   }
 }
