@@ -20,9 +20,10 @@ import com.intellij.execution.ExecutionTarget;
 import com.intellij.execution.ExecutionTargetProvider;
 import com.intellij.execution.configurations.RunConfiguration;
 import com.intellij.openapi.project.Project;
-import java.util.Collection;
 import java.util.Collections;
 import java.util.List;
+import java.util.Set;
+import org.jetbrains.android.util.AndroidUtils;
 import org.jetbrains.android.util.AndroidUtils;
 import org.jetbrains.annotations.NotNull;
 
@@ -34,7 +35,7 @@ public class DeviceAndSnapshotExecutionTargetProvider extends ExecutionTargetPro
       return Collections.singletonList(DefaultExecutionTarget.INSTANCE);
     }
 
-    Collection<Target> targets = DeviceAndSnapshotComboBoxAction.getInstance().getSelectedTargets(project);
-    return Collections.singletonList(new DeviceAndSnapshotComboBoxExecutionTarget(targets, AsyncDevicesGetter.getInstance(project)));
+    var targets = DeviceAndSnapshotComboBoxAction.getInstance().getSelectedTargets(project).orElseGet(Set::of);
+    return List.of(new DeviceAndSnapshotComboBoxExecutionTarget(targets, AsyncDevicesGetter.getInstance(project)));
   }
 }
